# autoware_common

./: .pre-commit-config.yaml  NOTICE  README.md  automatic-rebase.yaml  build_depends.repos
.github/: CODEOWNERS  sync-files-reverse-reference.yaml  sync-files.yaml
.github/workflows/: automatic-rebase.yaml  build-and-test-arm-pr.yaml  build-and-test-arm64.yaml  build-and-test-differential-arm64.yaml  build-and-test-differential-self-hosted.yaml  build-and-test-differential-with-tag.yaml  build-and-test-differential.yaml  build-and-test-pr.yaml  pre-commit.yaml  (+10 more)
autoware_cmake/: CMakeLists.txt  README.md  autoware_cmake-extras.cmake  package.xml
autoware_cmake/cmake/: autoware_package.cmake
autoware_lint_common/: CMakeLists.txt  README.md  package.xml
autoware_utils/: CMakeLists.txt  README.md  package.xml
autoware_utils/autoware_utils/: respawnable_node_container.py
autoware_utils/include/autoware_utils/: autoware_utils.hpp
autoware_utils/include/autoware_utils/geometry/: boost_geometry.hpp  boost_polygon_utils.hpp  geometry.hpp  pose_deviation.hpp
autoware_utils/include/autoware_utils/math/: constants.hpp  normalization.hpp  range.hpp  sin_table.hpp  trigonometry.hpp  unit_conversion.hpp
autoware_utils/include/autoware_utils/ros/: logger_level_configure.hpp  marker_helper.hpp  msg_covariance.hpp  msg_operation.hpp  parameter.hpp  pcl_conversion.hpp  polling_subscriber.hpp  published_time_publisher.hpp  transform_listener.hpp  uuid_helper.hpp
autoware_utils/include/autoware_utils/system/: backtrace.hpp
autoware_utils/include/autoware_utils/transform/: transforms.hpp
autoware_utils/src/: autoware_utils.cpp
autoware_utils/src/geometry/: boost_polygon_utils.cpp  geometry.cpp  pose_deviation.cpp
autoware_utils/src/math/: sin_table.cpp  trigonometry.cpp
autoware_utils/src/ros/: logger_level_configure.cpp  marker_helper.cpp  msg_operation.cpp
autoware_utils/src/system/: backtrace.cpp
autoware_utils/test/src/: test_autoware_utils.cpp
autoware_utils/test/src/geometry/: test_boost_polygon_utils.cpp  test_geometry.cpp  test_path_with_lane_id_geometry.cpp  test_pose_deviation.cpp
autoware_utils/test/src/math/: test_constants.cpp  test_normalization.cpp  test_range.cpp  test_trigonometry.cpp  test_unit_conversion.cpp
autoware_utils/test/src/ros/: test_published_time_publisher.cpp  test_uuid_helper.cpp
autoware_utils/test/src/transform/: test_transform.cpp
ros_version/: CMakeLists.txt  package.xml
ros_version/include/ros_version/: ros_version.hpp
ros_version/src/ros_version/: ros_version.cpp
ros_version/test/: test_ros_version.cpp
tmp/lanelet2_extension/: CMakeLists.txt  README.md  package.xml
tmp/lanelet2_extension/docs/: extra_regulatory_elements.md  lanelet2_format_extension.md
tmp/lanelet2_extension/include/lanelet2_extension/: version.hpp
tmp/lanelet2_extension/include/lanelet2_extension/autoware_lanelet2_validation/: cli.hpp  unconnected_relations.hpp  utils.hpp  validation.hpp
tmp/lanelet2_extension/include/lanelet2_extension/autoware_lanelet2_validation/validators/: missing_regulatory_elements.hpp  regulatory_element_details.hpp
tmp/lanelet2_extension/include/lanelet2_extension/autoware_lanelet2_validation/vals/: missing_regulatory_elements.hpp  regulatory_element_details.hpp
tmp/lanelet2_extension/include/lanelet2_extension/io/: autoware_multi_osm_parser.hpp  autoware_osm_parser.hpp
tmp/lanelet2_extension/include/lanelet2_extension/localization/: landmark.hpp
tmp/lanelet2_extension/include/lanelet2_extension/projection/: mgrs_projector.hpp  transverse_mercator_projector.hpp
tmp/lanelet2_extension/include/lanelet2_extension/regulatory_elements/: Forward.hpp  autoware_traffic_light.hpp  crosswalk.hpp  detection_area.hpp  invalid_lanelet.hpp  no_parking_area.hpp  no_stopping_area.hpp  road_marking.hpp  speed_bump.hpp  virtual_traffic_light.hpp
tmp/lanelet2_extension/include/lanelet2_extension/utility/: message_conversion.hpp  query.hpp  route_checker.hpp  utilities.hpp
tmp/lanelet2_extension/include/lanelet2_extension/visualization/: visualization.hpp
tmp/lanelet2_extension/lib/: autoware_multi_osm_parser.cpp  autoware_osm_parser.cpp  autoware_traffic_light.cpp  crosswalk.cpp  detection_area.cpp  invalid_lanelet.cpp  landmark.cpp  message_conversion.cpp  mgrs_projector.cpp  no_parking_area.cpp  no_stopping_area.cpp  query.cpp  road_marking.cpp  route_checker.cpp  speed_bump.cpp  transverse_mercator_projector.cpp  utilities.cpp  virtual_traffic_light.cpp  visualization.cpp
tmp/lanelet2_extension/src/: check_right_of_way.cpp  check_row.cpp  sample_code.cpp  validation.cpp
tmp/lanelet2_extension/src/autoware_lanelet2_validation/: main.cpp
tmp/lanelet2_extension/src/autoware_lanelet2_validation/lib/: cli.cpp  utils.cpp  validation.cpp
tmp/lanelet2_extension/src/autoware_lanelet2_validation/lib/validators/: missing_regulatory_elements.cpp  regulatory_element_details.cpp  unconnected_relations.cpp
tmp/lanelet2_extension/src/autoware_lanelet2_validation/lib/vals/: missing_regulatory_elements.cpp  regulatory_element_details.cpp
tmp/lanelet2_extension/test/src/: test_message_conversion.cpp  test_projector.cpp  test_query.cpp  test_regulatory_elements.cpp  test_route_checker.cpp  test_utilities.cpp
tmp/lanelet2_extension/test/src/autoware_lanelet2_validation/: test_missing_regulatory_elements.cpp  test_regulatory_element_details.cpp  test_unconnected_relations.cpp
tmp/lanelet2_extension_python/: .gitignore  CMakeLists.txt  package.xml  test.py
tmp/lanelet2_extension_python/example/: example.py
tmp/lanelet2_extension_python/lanelet2_extension_python/impl/: implementaion.py
tmp/lanelet2_extension_python/lanelet2_extension_python/projection/: __init__.py
tmp/lanelet2_extension_python/lanelet2_extension_python/regulatory_elements/: __init__.py
tmp/lanelet2_extension_python/lanelet2_extension_python/utility/: __init__.py  query.py  utilities.py
tmp/lanelet2_extension_python/notebook/: example.ipynb
tmp/lanelet2_extension_python/src/: geometry.cpp  projection.cpp  regulatory_elements.cpp  utility.cpp
